test/cases/compile_errors/indexing_an_array_of_size_zero.zig
const array = [_]u8{};
export fn foo() void {
    const pointer = &array[0];
    _ = pointer;
}

// error
//
// :3:27: error: indexing into empty array is not allowed
